source/assets/stylesheets/templates/_case.scss
.case {
  &__content {
    @include outer-container;
    margin-bottom: 40px;
    @include media($laptop) {
      margin-bottom: 80px;
    }
  }

  &__description {
    @include span-columns(10);
    @include shift(1);

    @include media($laptop) {
      @include span-columns(7);
    }

    @include media($desktop) {
      @include span-columns(8);
      @include shift(0);
    }

    h1 {
      font-style: italic;
      font-size: ds-rem-calc(18);
      margin: 0 0 10px 0;
    }

    h2 {
      font-weight: 600;
      max-width: 500px;
      letter-spacing: ds-rem-calc(-1);
      margin: 0 0 20px 0;
      font-size: ds-rem-calc(24);
      line-height: 1.2;
      @include media($laptop) { font-size: ds-rem-calc(32); }
    }

    h3 {
      font-weight: 600;
      max-width: 500px;
      margin: 30px 0 10px 0;
      letter-spacing: ds-rem-calc(-0.5);
      font-size: ds-rem-calc(18);
      @include media($laptop) { font-size: ds-rem-calc(24); }
    }

    p {
      max-width: 650px;
      line-height: 1.8;
      font-size: ds-rem-calc(16);
      @include media($laptop) { font-size: ds-rem-calc(18); }
    }

    small {
      font-size: ds-rem-calc(14);
      color: darken($ds-color-white, 50);
      display: block;
      line-height: 1.2;

      @include media($laptop) {
        font-size: ds-rem-calc(16);
      }
    }

    p,
    li {
      a {
        @extend .underlined;
        margin-bottom: 5px;
      }
    }

    .additional {
      display: none;
      opacity: 0;
      transition: opacity .2s ease-in-out, transform .2s ease-in-out;
      transform: translateY(10px);

      &.visible {
        opacity: 1;
        transform: translateY(0);
      }
    }
  }

  &__facts {
    @include span-columns(10);
    @include shift(1);
    display: none;
    opacity: 0;
    transition: opacity .2s ease-in-out .1s, transform .2s ease-in-out .1s;
    transform: translateY(10px);

    @include media($laptop) {
      @include span-columns(3);
      @include shift(0);
      display: none;
    }

    &.visible {
      opacity: 1;
      transform: translateY(0);
    }

    h3 {
      font-size: ds-rem-calc(12);
      font-weight: 600;
      text-transform: uppercase;
      letter-spacing: ds-rem-calc(1);
      margin: 0 0 5px 0;
    }

    p {
      font-size: ds-rem-calc(16);
    }

    ul {
      list-style: none;
      font-size: ds-rem-calc(16);

      li {
        margin: 5px 0;
      }
    }

    .sheet {
      margin-bottom: 40px;
    }
  }

  &__cta {
    @include span-columns(10);
    @include shift(1);
    margin-top: 20px;

    @include media($desktop) {
      @include shift(0);
    }

    a {
      margin-bottom: 10px;

      @media (min-width: 480px) {
        margin-bottom: 0;
      }
    }

    .expand {
      display: inline-block;
      margin-right: 40px;
      font-family: $ds-font-family-complementary;
      font-weight: 300;
      cursor: pointer;
      font-size: ds-rem-calc(16);
      color: $ds-color-charcoal;
      overflow: hidden;
      white-space: nowrap;
      line-height: 26px;
      vertical-align: middle;
      transition: all 0.1s ease-out;

      &:before {
        content: "+";
        display: inline-block;
        line-height: 26px;
        width: 30px;
        font-family: $ds-font-family;
        border: 2px solid $ds-color-link;
        color: $ds-color-link;
        border-radius: 50%;
        text-align: center;
        margin-right: 15px;
        transition: all 0.1s ease-out;
      }

      &.less:before {
        content: "-";
      }

      &:hover {
        color: $ds-color-link;
        &:before {
          color: $ds-color-light-gray;
          background: $ds-color-link;
        }
      }
    }

    .link {
      display: inline-block;
      font-family: $ds-font-family-complementary;
      font-weight: 300;
      cursor: pointer;
      font-size: ds-rem-calc(16);
      color: $ds-color-charcoal;
      line-height: 26px;
      vertical-align: middle;
      transition: all 0.1s ease-out;

      &:before {
        content: "→";
        display: inline-block;
        line-height: 26px;
        width: 30px;
        font-family: $ds-font-family;
        border: 2px solid $ds-color-link;
        color: $ds-color-link;
        border-radius: 50%;
        text-align: center;
        margin-right: 15px;
        transform: rotate(-45deg);
        transition: all 0.1s ease-out;
      }

      &:hover {
        color: $ds-color-link;
        &:before {
          color: $ds-color-light-gray;
          background: $ds-color-link;
        }
      }
    }
  }

  &__feed {
    padding: 60px 0;
    background: $ds-color-charcoal;

    .feed {
      max-width: 900px;
      margin: 0 auto;

      @include media($desktop) {
        max-width: 1800px;
      }

      .block {
        width: 100%;
        background: $ds-color-white;
        color: $ds-color-charcoal;
        text-align: center;
        clear: none !important;
        margin: 10px 0;

        @include media($desktop) {
          width: calc(50% - 20px);
          margin: 10px;

          &:nth-child(2n+3) {
            clear: left !important;
          }
        }
      }
    }
  }
}

.ar {
  .case {
    @include direction-context(right-to-left) {
      &__content {
        @include outer-container;
      }

      &__description {
        @include span-columns(10);
        @include shift(1);

        @include media($laptop) {
          @include span-columns(7);
        }

        @include media($desktop) {
          @include span-columns(8);
          @include shift(0);
        }
      }

      &__facts {
        @include span-columns(10);
        @include shift(1);
        display: none;

        @include media($laptop) {
          @include span-columns(3);
          @include shift(0);
          display: none;
        }
      }

      &__cta {
        @include span-columns(10);
        @include shift(1);

        @include media($desktop) {
          @include shift(0);
        }

        .expand {
          margin-right: 0;
          margin-left: 40px;

          &:before {
            display: none;
          }

          &:after {
            content: "+";
            display: inline-block;
            line-height: 26px;
            width: 30px;
            font-family: $ds-font-family;
            border: 2px solid $ds-color-link;
            border-radius: 50%;
            text-align: center;
            margin-right: 15px;
          }

          &.less:after {
            content: "-";
          }
        }

        .link {

          &:before {
            display: none;
          }

          &:after {
            content: "←";
            display: inline-block;
            line-height: 26px;
            width: 30px;
            font-family: $ds-font-family;
            border: 2px solid $ds-color-link;
            border-radius: 50%;
            text-align: center;
            margin-right: 15px;
            transform: rotate(45deg);
          }
        }
      }
    }
  }
}

